Rearranging things to work for iOS

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,13 +7,13 @@ set (PLUGIN_ROOT "${CMAKE_CURRENT_SOURCE_DIR}")
 
 
 if(BUILD_IOS)
-	file( GLOB PLUGIN_SRC "${PLUGIN_ROOT}/MoaiNativeEventsIOS/*.cpp" )
+	file( GLOB PLUGIN_SRC "${PLUGIN_ROOT}/MoaiNativeEventsIOS/*.mm"  "${PLUGIN_ROOT}/MoaiNativeEventsIOS/*.cpp" "${PLUGIN_ROOT}/*.cpp")
 	set (PLUGIN_INCLUDES 
 		${PLUGIN_ROOT}
 		${PLUGIN_ROOT}/MoaiNativeEventsIOS
 	)
 elseif(BUILD_ANDROID)
-	file( GLOB PLUGIN_SRC "${PLUGIN_ROOT}/MoaiNativeEventsAndroid/*.cpp" )
+	file( GLOB PLUGIN_SRC "${PLUGIN_ROOT}/MoaiNativeEventsAndroid/*.cpp" "${PLUGIN_ROOT}/*.cpp")
 	set (PLUGIN_INCLUDES 
 		${PLUGIN_ROOT}
 		${PLUGIN_ROOT}/MoaiNativeEventsAndroid
@@ -24,6 +24,6 @@ set (PLUGIN_INCLUDES
 	${PLUGIN_ROOT}
 )
 
-add_library(${PLUGIN_TARGET} STATIC ${PLUGIN_SRC})
+add_library(${PLUGIN_TARGET} STATIC ${PLUGIN_SRC} )
 target_include_directories(${PLUGIN_TARGET} PUBLIC ${PLUGIN_INCLUDES})
 target_link_libraries(${PLUGIN_TARGET} moai-core moai-util moai-sim zlcore)
